<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<parent>
        <artifactId>tck</artifactId>
        <groupId>fish.payara.jakarta.tests.tck</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <groupId>fish.payara.jakarta.cdi.langmodel.tck</groupId>
    <artifactId>cdi-langmodel-tck</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>Jakarta CDI langmodel Runner</name>
    <description>This pom runs the JakartaEE CDI langmodel TCK.</description>

    <properties>
        <testng.version>7.4.0</testng.version>
        <maven.compiler.release>11</maven.compiler.release>
        <cdi.tck.version>4.0.5</cdi.tck.version>
        <cdi.api.version>4.0.0</cdi.api.version>
        <weld.version>5.0.0.SP2</weld.version>
        <arquillian.version>1.7.0.Alpha10</arquillian.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>jakarta.enterprise</groupId>
            <artifactId>jakarta.enterprise.cdi-api</artifactId>
            <version>${cdi.api.version}</version>
        </dependency>
        <dependency>
            <groupId>jakarta.enterprise</groupId>
            <artifactId>cdi-tck-lang-model</artifactId>
            <version>${cdi.tck.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.weld</groupId>
            <artifactId>weld-lite-extension-translator</artifactId>
            <version>${weld.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.weld</groupId>
            <artifactId>weld-core-impl</artifactId>
            <version>${weld.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.weld</groupId>
            <artifactId>weld-core-test-common</artifactId>
            <version>${weld.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.arquillian.container</groupId>
            <artifactId>arquillian-weld-embedded</artifactId>
            <version>3.0.2.Final</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.arquillian.junit</groupId>
            <artifactId>arquillian-junit-container</artifactId>
            <version>${arquillian.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M6</version>
                <configuration>
                    <argLine>
                        --add-exports=java.desktop/sun.awt=ALL-UNNAMED
                        --add-opens=java.base/java.io=ALL-UNNAMED
                        --add-opens=java.base/java.lang=ALL-UNNAMED
                        --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
                        --add-opens=java.base/java.security=ALL-UNNAMED
                        --add-opens=java.base/java.util=ALL-UNNAMED
                        --add-opens=java.management/javax.management=ALL-UNNAMED
                        --add-opens=java.naming/javax.naming=ALL-UNNAMED
                    </argLine>
                    <enableAssertions>true</enableAssertions>
                    <forkCount>1</forkCount>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>